<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context="com.example.jeremybohannon.hw2_group14.ContactDetailsActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                app:srcCompat="@drawable/add_photo"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/first"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_company"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_phone_number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="187dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_email"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_url"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <TextView
                    android:id="@+id/urlValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView" />
            </LinearLayout>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_address"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_birthday"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_nickname"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_facebookUrl"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <TextView
                    android:id="@+id/facebookUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_twitterUrl"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <TextView
                    android:id="@+id/twitterUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/skype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_skype"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <TextView
                    android:id="@+id/skypeUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_youtubeChannel"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <TextView
                    android:id="@+id/youtubeUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
