<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeremybohannon.hw2_group14.MainActivity">

    <Button
        android:id="@+id/createNewBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_create_new_contact"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_contact"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/createNewBtn"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/deleteContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_contact"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/editBtn"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editBtn"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editBtn" />

    <Button
        android:id="@+id/displayContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_display_contact"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/deleteContact"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/deleteContact"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/deleteContact" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_finish"
        app:layout_constraintLeft_toLeftOf="@+id/displayContact"
        app:layout_constraintRight_toRightOf="@+id/displayContact"
        app:layout_constraintTop_toBottomOf="@+id/displayContact"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>